kubernetes/internal/wordpress/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
 name: wordpress-svc
spec:
 type: ClusterIP
 selector:
   app: wordpress
 ports:
 - port: 80
   targetPort: 80
